<resources>
    <string name="app_name">Ttasker_capstone</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Res -->
    <string name="RESPONSE0">must implement OnFragmentInteraction</string>
    <string name="RESPONSE1">vnd.android.cursor.dir</string>
    <string name="Action0">Xe589</string>
    <string name="RESPONSE2">Unknown Uri :</string>
    <string name="RESPONSE3">Faild to insert into</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <!---  bundle -->
    <string name="bundleK1">AE7ECO0</string>
    <string name="bundleK2">AE7ECO1</string>
    <string name="bundleK3">AE7ECO2</string>
    <string name="bundleK4">AE7ECO3</string>
    <string name="bundleK5">AE7ECO4</string>
    <string name="bundleK6">AE7ECO5</string>
    <string name="bundleK7">AE7ECO6</string>
    <string name="date">DATE</string>
    <string name="description">Description</string>
    <string name="name">NAME</string>
    <string name="string_text2">string/text2</string>
    <string name="text1">image</string>
    <string name="android_charting_application_xml_ui_design_tutorial_with_example_android_charting_application_xml_ui_design_tutorial_with_example_android_charting_application_xml_ui_design_tutorial_with_example_android_charting_application_xml_ui_design_tutorial_with_example">Android charting application xml ui design tutorial with example. Android charting application xml ui design tutorial with example. Android charting application xml ui design tutorial with example. Android charting application xml ui design tutorial with example.</string>
    <string name="android_charting_application_xml_ui_design_android_charting_application_xml_ui_design_tutorial_with_example_android_charting_application_xml_ui_design_android_charting_application_xml_ui_design">Android charting application xml ui design. Android charting application xml ui design tutorial with example. Android charting application xml ui design. Android charting application xml ui design.</string>
    <string name="http_eccooookkpo">http// eccooookkpo</string>
    <string name="http">http///</string>
    <string name="string_text0">string/text0</string>
    <string name="project_name">project name</string>
    <string name="loading">loading.....</string>
    <string name="sign_in">sign_in</string>
    <string name="shareproject">shareProject</string>
    <string name="titlelable">TitleLable</string>
    <string name="title">Title</string>
    <string name="desclab">DescLab</string>
    <string name="desc">DESC</string>
    <string name="year">year</string>
    <string name="month">month</string>
    <string name="day">Day</string>
    <string name="addtask">AddTask</string>
    <string name="projectname">ProjectName</string>
    <string name="create">Create</string>
    <string name="projectkey">ProjectKey</string>
    <string name="join">Join</string>
    <string name="creat_project">Creat Project</string>
    <string name="join_project">Join Project</string>
    <string name="my_projects">My Projects</string>
    <string name="x_o">x/O</string>
    <string name="recycler_view">recycler view</string>
    <string name="chatbutton">chatButton</string>
    <string name="dum">dummy</string>
    <string name="widgetdata">widgetdata</string>
    <string name="eta">eTa</string>
    <string name="eta7">eTa7</string>
    <string name="userissignedin">user is oReady signed in</string>
    <string name="target">target</string>
    <string name="createdsucss">project Created Successfully</string>
    <string name="noSuch">no such project</string>
    <string name="wb">welcome_back</string>
    <string name="resettasks">resetTasks</string>
    <string name="resetchat">resetChat</string>
    <string name="N">null</string>
    <string name="eta7x">eta7x</string>
    <string name="notification">Notification</string>
    <string name="notfstate">notfstate</string>
    <string name="alpha">Alpha</string>
    <string name="chat">chat</string>
    <string name="smsitem">Smsitem</string>
    <string name="userPitem">UserprojectItem</string>
    <string name="acess">Access</string>
    <string name="pkey">PKey</string>
    <string name="cfrag">create_frag</string>
    <string name="Jfrag">join_frag</string>
    <string name="MYfrag">MyProjects</string>
    <string name="adminfag">admin_frag</string>
    <string name="userfrag">user_frag</string>
    <string name="memperdata">member data</string>
    <string name="projectdata">project data</string>
    <string name="Tfragment">tasks_fragment</string>
    <string name="addTfragment">Addtasks_fragment</string>
    <string name="msgsignin">signing in.....</string>
    <string name="msgsync">Syncing.....</string>
    <string name="Auf">Authentication failed.</string>
    <string name="GSE">Google Play Services error.</string>
</resources>

