<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/NAME"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginStart="4dp"
            android:text="@string/name"
            android:textColor="#000"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/DATE"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="#000"
            android:textSize="12sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/DATA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textColor="#000"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:padding="5dp"
        android:text="@string/x_o"
        android:textColor="#000"
        android:textSize="14sp" />

</LinearLayout>
